# starting-ragchatbot-codebase

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TESTING_SUMMARY.md  TEST_COMMANDS.md  frontend-changes.md  package.json  playwright.config.js  pyproject.toml  pytest.ini
backend/: app.py  document_processor.py  rag_system.py  search_tools.py
backend/tests/: README.md  conftest.py  test_app.py  test_integration.py  test_models.py
frontend/: index.html  script.js  style.css
tests/: theme-toggle.spec.js  visual-test.spec.js
